System tray: Disallow configure and toggles for secondary user

This CL:
* Shows the settings > details UI for non connectable networks
  for secondary users.
* Disables toggles for secondary users.

Bug: 843888,827096
Change-Id: Ie3b0554211e1ad42f910d921b55d6553e3a55836
Reviewed-on: https://chromium-review.googlesource.com/1089585
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565312}
Former-commit-id: cc0979cd59b0a431ce55924f90f21189befc51c7